# CPP

./: .clang-format  .gitignore  CFB Cursos.html  GetCursorPos.cpp  Marcos Castro.html  ansi-color-escape.cpp  concepts_c++20.cpp  filesystem_c++17.cpp  lib format c++20.cpp  makeimage.cpp  matrix1.cpp  matrix2.cpp  openexe.cpp  proxima pesquisa.txt  shutdown-v2.cpp  shutt.cpp  shutt2_time.cpp  test_cinatra.cpp
OpenCV/: camera-capture.cpp  cap1-reads-imgs-videos-webcams.cpp  cap2-basic-functions.cpp  cap3-resize-crop.cpp  cap4-drawing-shapes-text.cpp  cap5-warp-perspective.cpp  cap6-color-detection.cpp  cap7-shaper-contour-detection.cpp  cap8-face-detection.cpp  image-read.cpp  project1-auxiliar-color-picker.cpp  project1-virtual-painter.cpp  project2-document-scanner.cpp  project3-license-plate-detection.cpp
OpenGL/: .clang-format  aula02-janela+triangulo.cpp  aula03-modern-opengl.cpp  aula04-vertex-buffers-vertex-attributes-triangle.cpp  aula05-shaders.cpp  aula06-como-lidar-com-shaders-externo.cpp  aula07-index-buffers.cpp  aula08-lidando-com-erros.cpp  aula09-uniforms.cpp  aula10-vertex-array.cpp  aula11-abstracao-em-classes.cpp  aula12-abstracao-buffer-layout.cpp  aula13-abstracao-shader-layout.cpp  aula14-basic-renderer.cpp  aula14.cpp  jenela-simples-GL.cpp
OpenGL/aula22/: CMakeLists.txt  main.cpp
OpenGL/aula22/lib/imgui/: CMakeLists.txt
Snake game/: draw.hpp  input.hpp  logic.hpp  setup.hpp  snake.cpp
add-icon-to-exe-GCC/: main.cpp  readme.md
c++ aulas extraa/: KNN2.cpp  arquivo.txt  aula13 modulos.cbp  aula13 modulos.cpp  aula13 modulos.layout  aula13 modulos_math.cpp  aula13 modulos_math.h  aula25 bubble sort.cpp  aula36 class template e pilha.h  aula36 class template.cpp  aula51 struct alinhadas.cpp  aula52 classes alinhadas.cpp  aula53 arvore binaria.cpp  aula54 criando namespaces.cpp  aula55 retorno por referencia.cpp  aula63 Classe priority queue 1.cpp  aula63 Classe priority queue 2.cpp  aula66 fstream objetos.cpp  aula67 grafos - matriz de adjacencia.cpp  aula68 grafos - lista de adjacencia.cpp  aula69 grafos - busca em profundidade DFS.cpp  aula70 grafos - busca em largura BFS.cpp  aula71 grafos - Detectando ciclo.cpp  aula72 grafos - Alogaritimo kruskal pt1.cpp  aula73 grafos - Algoritmo de Kruskal pt2 (union-find).cpp  aula74 grafos - Algoritmo de Kruskal implementaçao pt3.cpp  (+14 more)
knn/: knn.cpp  (+3 more)
(+184 files in other folders)
